# LudumDare59

./: .gitignore  AGENTS.md  BEVY_REDESIGN_PLAN.md  BEVY_REDESIGN_TODOS.md  Cargo.toml  MOCKUP_REDESIGN.md  build.ps1  filter_ipa.py  five_ipa_words_fixed.txt  random_words.py  web_build.ps1
.claude/: settings.local.json
assets/: curse.txt  spellbook.book.json
assets/images/: futhark.xcf
assets/npcs/: goblin.npc.json  robed.npc.json
assets/sound/: conversational_params.json  params.json
mockups/: battle-ui.html
src/: acceptance.rs  audio_params.rs  combat.rs  dictionary.rs  futhark.rs  health.rs  lib.rs  loading.rs  main.rs  npcs.rs  rune_slots.rs  snapshot.rs  spellbook.rs  tutorial.rs
src/audio/: config.rs  mod.rs  params.rs  playback.rs  processing.rs
src/rune_words/: battle.rs  battle_stages.rs  mod.rs  rune_slots.rs
src/rune_words/battle_states/: acting.rs  binding.rs  mod.rs  reacting.rs
src/ui/: arena.rs  binding_panel.rs  book.rs  clock.rs  effects.rs  game_over.rs  health.rs  health_bars.rs  hud_root.rs  inscribed.rs  keyboard.rs  main_menu.rs  mod.rs  palette.rs  samplers.rs  spell_selection.rs
tasks/: TASK_BUGFIX.md  TASK_FEATURE.md  TASK_REFINE.md
tests/: futhark_it.rs
tests/acceptance/: battle_stages.rs  shows_acting_battle_state.rs  shows_battle_rune_word.rs  shows_binding_battle_state.rs  shows_futhark_rune.rs  shows_loading_rune_reveal.rs  shows_reacting_battle_state.rs  shows_rune_slots.rs  shows_rune_word_navigation.rs  shows_spell_selection.rs  shows_typed_futhark_rune.rs  shows_window.rs  uat.rs  uat_battle_against_npc.rs  uat_battle_stages.rs
tests/snapshots/: .gitignore
web/: index.html
