[package]
name = "LudumDare59"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_asset_loader = { version = "0.26", features = ["2d"] }
rand = "0.8"
rodio = "0.20"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "uat_shows_window"
path = "tests/acceptance/shows_window.rs"

[[bin]]
name = "uat_shows_futhark_rune"
path = "tests/acceptance/shows_futhark_rune.rs"

[[bin]]
name = "uat_shows_loading_rune_reveal"
path = "tests/acceptance/shows_loading_rune_reveal.rs"

[[bin]]
name = "uat_shows_typed_futhark_rune"
path = "tests/acceptance/shows_typed_futhark_rune.rs"

[[bin]]
name = "uat_shows_rune_slots"
path = "tests/acceptance/shows_rune_slots.rs"

[[bin]]
name = "uat_shows_rune_word_navigation"
path = "tests/acceptance/shows_rune_word_navigation.rs"
