[package]
name = "LudumDare59"
version = "0.1.0"
edition = "2024"
default-run = "LudumDare59"

[dependencies]
bevy = { version = "0.18.1", features = ["debug"] }
bevy_asset_loader = { version = "0.26", features = ["2d"] }
bevy_aspect_ratio_mask = "0.4"
rand = "0.10"
getrandom = { version = "0.4", features = ["wasm_js"] }
rodio = "0.20"
pitch_shift = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "console"] }

[[bin]]
name = "uat"
path = "tests/acceptance/uat.rs"

[[bin]]
name = "futhark_it"
path = "tests/futhark_it.rs"
